# wagtaildraftsharing

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  testmanage.py  tox.ini
.github/workflows/: ci.yml
wagtaildraftsharing/: actions.py  apps.py  forms.py  models.py  settings.py  snippets.py  urls.py  utils.py  views.py  wagtail_hooks.py
wagtaildraftsharing/migrations/: 0001_initial.py  0002_alter_wagtaildraftsharinglink_created_by.py  0003_alter_wagtaildraftsharinglink_revision.py
wagtaildraftsharing/static/wagtaildraftsharing/js/: wagtaildraftsharing.js  wagtaildraftsharing_controller.js
wagtaildraftsharing/templates/wagtailadmin/generic/history/: action_cell.html
wagtaildraftsharing/templates/wagtailadmin/pages/revisions/: _actions.html
wagtaildraftsharing/templates/wagtaildraftsharing/: action_menu_item.html
wagtaildraftsharing/tests/: settings.py  test_models.py  test_views.py  test_wagtail_hooks.py  urls.py
