[project]
name = "wagtaildraftsharing"
version = "0.3.0"
description = "Share wagtail drafts with private URLs."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "CC0"}
authors = [
    {name = "Shohan Dutta Roy", email = "shohanduttaroy99@gmail.com" }
]
maintainers = [
    {name = "Steve Jalim", email = "stevejalim@mozilla.com" }
]
dependencies = [
    "wagtail>=5.1",
]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.1",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 5",
    "Framework :: Wagtail :: 6",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "License :: Public Domain",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
testing = [
    "coverage[toml]",
    "tox",
    "tox-gh-actions",
    "wagtail-factories",
    "freezegun==1.5.1",
]

[project.urls]
"Homepage" = "https://github.com/KIRA009/wagtaildraftsharing"
"Bug Reports" = "https://github.com/KIRA009/wagtaildraftsharing/issues"
"Source" = "https://github.com/KIRA009/wagtaildraftsharing"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
inventory = [
    "templates/wagtailadmin/*",
    "static/wagtaildraftsharing/*",
]

[tool.ruff]
exclude = [
    ".git",
    ".tox",
    "__pycache__",
    "*/migrations/*.py",
    "docs",
    ".venv",
    "venv",
]


[tool.ruff.lint]
ignore = []
select = [
    "E",
    "F",
    "W",
]

[tool.ruff.lint.isort]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]

[tool.coverage.run]
omit = [
    "wagtaildraftsharing/tests/*",
]
